<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.0.0</version>
        <relativePath /> <!-- lookup parent from repository -->
    </parent>
    <groupId>miller79</groupId>
    <artifactId>spring-boot-benchmark-parent</artifactId>
    <version>LOCAL-SNAPSHOT</version>
    <packaging>pom</packaging>

    <properties>
        <java.version>25</java.version>
        <imageName>${project.artifactId}</imageName>
    </properties>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <configuration>
                        <image>
                            <name>${imageName}:${project.version}</name>
                            <env>
                                <BP_SPRING_CLOUD_BINDINGS_DISABLED>true</BP_SPRING_CLOUD_BINDINGS_DISABLED>
                            </env>
                        </image>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <profiles>
        <profile>
            <id>plain</id>
        </profile>
        <profile>
            <id>native</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.graalvm.buildtools</groupId>
                        <artifactId>native-maven-plugin</artifactId>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>aot</id>
            <build>
                <pluginManagement>
                    <plugins>
                        <plugin>
                            <groupId>org.springframework.boot</groupId>
                            <artifactId>spring-boot-maven-plugin</artifactId>
                            <executions>
                                <execution>
                                    <id>process-aot</id>
                                    <goals>
                                        <goal>process-aot</goal>
                                    </goals>
                                </execution>
                            </executions>
                            <configuration>
                                <image>
                                    <env>
                                        <BP_SPRING_AOT_ENABLED>true</BP_SPRING_AOT_ENABLED>
                                    </env>
                                </image>
                            </configuration>
                        </plugin>
                    </plugins>
                </pluginManagement>
            </build>
        </profile>
        <profile>
            <id>cds</id>
            <build>
                <pluginManagement>
                    <plugins>
                        <plugin>
                            <groupId>org.springframework.boot</groupId>
                            <artifactId>spring-boot-maven-plugin</artifactId>
                            <configuration>
                                <image>
                                    <env>
                                        <BP_JVM_CDS_ENABLED>true</BP_JVM_CDS_ENABLED>
                                    </env>
                                </image>
                            </configuration>
                        </plugin>
                    </plugins>
                </pluginManagement>
            </build>
        </profile>
        <profile>
            <id>aot-caching</id>
            <build>
                <pluginManagement>
                    <plugins>
                        <plugin>
                            <groupId>org.springframework.boot</groupId>
                            <artifactId>spring-boot-maven-plugin</artifactId>
                            <configuration>
                            <imageBuilder>paketobuildpacks/builder-noble-java-tiny:latest</imageBuilder>
                            <image>
                                <env>
                                    <BP_JVM_VERSION>25</BP_JVM_VERSION>
                                    <BP_JVM_AOTCACHE_ENABLED>true</BP_JVM_AOTCACHE_ENABLED>
                                    <BP_SPRING_AOT_ENABLED>true</BP_SPRING_AOT_ENABLED>
                                    <JAVA_TOOL_OPTIONS>-XX:+UseCompactObjectHeaders</JAVA_TOOL_OPTIONS>
                                    <BPE_DELIM_JAVA_TOOL_OPTIONS xml:space="preserve"> </BPE_DELIM_JAVA_TOOL_OPTIONS>
                                    <BPE_APPEND_JAVA_TOOL_OPTIONS>-XX:+UseCompactObjectHeaders</BPE_APPEND_JAVA_TOOL_OPTIONS>
                                </env>
                                <buildpacks>
                                    <buildpack>urn:cnb:builder:paketo-buildpacks/ca-certificates</buildpack>
                                    <buildpack>urn:cnb:builder:paketo-buildpacks/bellsoft-liberica</buildpack>
                                    <buildpack>urn:cnb:builder:paketo-buildpacks/syft</buildpack>
                                    <buildpack>urn:cnb:builder:paketo-buildpacks/executable-jar</buildpack>
                                    <buildpack>paketobuildpacks/spring-boot:anthony-pr-571</buildpack>
                                    <buildpack>urn:cnb:builder:paketo-buildpacks/environment-variables</buildpack>
                                </buildpacks>
                            </image>
                            <layers>
                                <enabled>true</enabled>
                            </layers>
                        </configuration>
                        </plugin>
                    </plugins>
                </pluginManagement>
            </build>
        </profile>
        <profile>
            <id>aot-cds</id>
            <build>
                <pluginManagement>
                    <plugins>
                        <plugin>
                            <groupId>org.springframework.boot</groupId>
                            <artifactId>spring-boot-maven-plugin</artifactId>
                            <executions>
                                <execution>
                                    <id>process-aot</id>
                                    <goals>
                                        <goal>process-aot</goal>
                                    </goals>
                                </execution>
                            </executions>
                            <configuration>
                                <image>
                                    <env>
                                        <BP_JVM_CDS_ENABLED>true</BP_JVM_CDS_ENABLED>
                                        <BP_SPRING_AOT_ENABLED>true</BP_SPRING_AOT_ENABLED>
                                    </env>
                                </image>
                            </configuration>
                        </plugin>
                    </plugins>
                </pluginManagement>
            </build>
        </profile>
        <profile>
            <id>alpaquita</id>
            <build>
                <pluginManagement>
                    <plugins>
                        <plugin>
                            <groupId>org.springframework.boot</groupId>
                            <artifactId>spring-boot-maven-plugin</artifactId>
                            <configuration>
                                <image>
                                    <builder>bellsoft/buildpacks.builder:musl</builder>
                                </image>
                            </configuration>
                        </plugin>
                    </plugins>
                </pluginManagement>
            </build>
        </profile>
    </profiles>
</project>
